# scrappy-template

./: default.nix  henforcer.toml  scrappy-template.cabal  shell.nix
src/Scrappy/: Template.hs
test/: Main.hs  TemplatePropertyTest.hs  TemplateTest.hs
